--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/PannenetsF/TQT.git
 [submodule "wageubn"]
 	path = wageubn
-	url = https://github.com/PannenetsF/wageubn
+	url = https://github.com/PannenetsF/wageubn.git
